
0.6.4
  * Cleaned up the coherent part of the dedispersion module
  * Added a time estimating progress bar to lsl.common.progress
  * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
  * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
  * Added validation for the DR spectrometer channels/integration count/mode in an SDF

0.6.3
  * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
  * Added normalization by the transform length to the lsl.reader._gofast module
  * Added back in the "import lsl; lsl.test()" fixture
  * Updated the plotUVcoverage.py script to work with all 260 stands
  * Fixed the data volume computation for lsl.common.sdf.Stepped observations
  * Updated the imageIDI.py script to work with either correlated TBW or TBN files
  * Reorganized the scripts to better handle metadata and removed the IOC scripts
  * Changed the default values of SESSION_LOG_SCH and SESSION_LOG_EXE in lsl.common.sdf to False
  * Fixed the lsl.common.sdf.Stepped class so that the step lists of independent
  * Added the pointing correction keywords to the binary SSMIF reader
  * Fixed a bug in the calculation of cable delays
  * Fixed the order of the optional SESSION_* keywords in the SDF renderer
  * Updated the SDF parser to better work with SDFs that contain custom beamforming
  * Added convenience functions to the lsl.common.mcs module to help pack delays and gains for custom beamforming SDFs
  * Updated the included LWA1 SSMIF to the March 10, 2013 version
  * Added support for phase offsets to the lsl.sim.vis.scaleData() function
  * Improved the lsl.imaging.selfCal module by added in new methods
  * Fixed the decimation values for the TBN and DRX CIC filters

0.6.2
  * Fixed a bug in splitDRX.py that caused the script to die if an --offset was passed in
  * Fixed a bug in lsl.common.mcs that caused binary packed files to be read in incorrectly on 32-bit installs