@@ -9,6 +9,8 @@
   * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
   * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
   * Added validation for the DR spectrometer channels/integration count/mode in an SDF
+  * Fixed a couple of typos in the DR spectrometer reader that mixed the I-only and Q-only output modes
+  * Fixed the 'fills' normalization in the DR spectrometer reader for the YX-only, YY-only, XX/YY, and XX/XY/YX/YY modes
 
 0.6.3
   * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
